may/src/codegen/snapshots/may__codegen__tests__eq.snap
---
source: may/src/codegen/tests.rs
expression: PrettyPrint(&zo)
---
(
    fun
    nonrec
    (
        Set0
        0
    )
    (
        for
        (
            1
        )
        Prop0
    )
    (
        ind
        Prop0
        "Eq"
        (
            2
        )
        (
            (
                ()
                (
                    2
                )
            )
        )
    )
)
