may/src/codegen/snapshots/may__codegen__tests__eq_commutative.snap
---
source: may/src/codegen/tests.rs
expression: PrettyPrint(&zo)
---
(
    fun
    nonrec
    (
        Type0
        0
        1
        (
            (
                (
                    fun
                    nonrec
                    (
                        Type0
                        0
                    )
                    (
                        for
                        (
                            1
                        )
                        Type0
                    )
                    (
                        ind
                        Type0
                        "Eq"
                        (
                            2
                        )
                        (
                            (
                                ()
                                (
                                    2
                                )
                            )
                        )
                    )
                )
                2
                1
            )
            0
        )
    )
    (
        (
            (
                fun
                nonrec
                (
                    Type0
                    0
                )
                (
                    for
                    (
                        1
                    )
                    Type0
                )
                (
                    ind
                    Type0
                    "Eq"
                    (
                        2
                    )
                    (
                        (
                            ()
                            (
                                2
                            )
                        )
                    )
                )
            )
            3
            1
        )
        2
    )
    (
        match
        1
        2
        (
            (
                (
                    fun
                    nonrec
                    (
                        Type0
                        0
                    )
                    (
                        for
                        (
                            1
                        )
                        Type0
                    )
                    (
                        ind
                        Type0
                        "Eq"
                        (
                            2
                        )
                        (
                            (
                                ()
                                (
                                    2
                                )
                            )
                        )
                    )
                )
                6
                1
            )
            5
        )
        (
            (
                0
                (
                    (
                        fun
                        nonrec
                        (
                            Type0
                            0
                        )
                        (
                            (
                                ind
                                Type0
                                "Eq"
                                (
                                    1
                                )
                                (
                                    (
                                        ()
                                        (
                                            1
                                        )
                                    )
                                )
                            )
                            0
                        )
                        (
                            vcon
                            (
                                ind
                                Type0
                                "Eq"
                                (
                                    2
                                )
                                (
                                    (
                                        ()
                                        (
                                            2
                                        )
                                    )
                                )
                            )
                            0
                        )
                    )
                    4
                    3
                )
            )
        )
    )
)
