may/src/codegen/snapshots/may__codegen__tests__ill_typed_unused_def_does_not_affect_converted_leaf.snap
---
source: may/src/codegen/tests.rs
expression: PrettyPrint(&converted_leaf)
---
(
    (
        vcon
        (
            ind
            Set0
            "Nat"
            ()
            (
                (
                    (
                        0
                    )
                    ()
                )
                (
                    ()
                    ()
                )
            )
        )
        0
    )
    (
        (
            vcon
            (
                ind
                Set0
                "Nat"
                ()
                (
                    (
                        (
                            0
                        )
                        ()
                    )
                    (
                        ()
                        ()
                    )
                )
            )
            0
        )
        (
            vcon
            (
                ind
                Set0
                "Nat"
                ()
                (
                    (
                        (
                            0
                        )
                        ()
                    )
                    (
                        ()
                        ()
                    )
                )
            )
            1
        )
    )
)
