may/src/codegen/snapshots/may__codegen__tests__list.snap
---
source: may/src/codegen/tests.rs
expression: PrettyPrint(&zo)
---
(
    fun
    nonrec
    (
        Set0
    )
    Set0
    (
        ind
        Set0
        "List"
        ()
        (
            (
                (
                    2
                    1
                )
                ()
            )
            (
                ()
                ()
            )
        )
    )
)
