may/src/codegen/snapshots/may__codegen__tests__list_cons.snap
---
source: may/src/codegen/tests.rs
expression: PrettyPrint(&zo)
---
(
    fun
    nonrec
    (
        Type0
    )
    (
        for
        (
            0
            (
                ind
                Type0
                "List"
                ()
                (
                    (
                        (
                            2
                            1
                        )
                        ()
                    )
                    (
                        ()
                        ()
                    )
                )
            )
        )
        (
            ind
            Type0
            "List"
            ()
            (
                (
                    (
                        3
                        1
                    )
                    ()
                )
                (
                    ()
                    ()
                )
            )
        )
    )
    (
        vcon
        (
            ind
            Type0
            "List"
            ()
            (
                (
                    (
                        2
                        1
                    )
                    ()
                )
                (
                    ()
                    ()
                )
            )
        )
        0
    )
)
