may/src/codegen/snapshots/may__codegen__tests__list_nil.snap
---
source: may/src/codegen/tests.rs
expression: PrettyPrint(&zo)
---
(
    fun
    nonrec
    (
        Type0
    )
    (
        ind
        Type0
        "List"
        ()
        (
            (
                (
                    1
                    1
                )
                ()
            )
            (
                ()
                ()
            )
        )
    )
    (
        vcon
        (
            ind
            Type0
            "List"
            ()
            (
                (
                    (
                        2
                        1
                    )
                    ()
                )
                (
                    ()
                    ()
                )
            )
        )
        1
    )
)
