may/src/codegen/snapshots/may__codegen__tests__substitutable_implies_eq.snap
---
source: may/src/codegen/tests.rs
expression: PrettyPrint(&zo)
---
(
    fun
    nonrec
    (
        Set0
        0
        1
        (
            for
            (
                (
                    for
                    (
                        2
                    )
                    Prop0
                )
                (
                    0
                    2
                )
            )
            (
                1
                2
            )
        )
    )
    (
        (
            (
                fun
                nonrec
                (
                    Set0
                    0
                )
                (
                    for
                    (
                        1
                    )
                    Prop0
                )
                (
                    ind
                    Prop0
                    "Eq"
                    (
                        2
                    )
                    (
                        (
                            ()
                            (
                                2
                            )
                        )
                    )
                )
            )
            3
            2
        )
        1
    )
    (
        1
        (
            fun
            nonrec
            (
                4
            )
            Prop0
            (
                (
                    (
                        fun
                        nonrec
                        (
                            Set0
                            0
                        )
                        (
                            for
                            (
                                1
                            )
                            Prop0
                        )
                        (
                            ind
                            Prop0
                            "Eq"
                            (
                                2
                            )
                            (
                                (
                                    ()
                                    (
                                        2
                                    )
                                )
                            )
                        )
                    )
                    6
                    5
                )
                1
            )
        )
        (
            (
                fun
                nonrec
                (
                    Set0
                    0
                )
                (
                    (
                        ind
                        Prop0
                        "Eq"
                        (
                            1
                        )
                        (
                            (
                                ()
                                (
                                    1
                                )
                            )
                        )
                    )
                    0
                )
                (
                    vcon
                    (
                        ind
                        Prop0
                        "Eq"
                        (
                            2
                        )
                        (
                            (
                                ()
                                (
                                    2
                                )
                            )
                        )
                    )
                    0
                )
            )
            4
            3
        )
    )
)
