may/src/codegen/snapshots/may__codegen__tests__two.snap
---
source: may/src/codegen/tests.rs
expression: PrettyPrint(&zo)
---
(
    (
        vcon
        (
            ind
            Set0
            "Nat"
            ()
            (
                (
                    (
                        0
                    )
                    ()
                )
                (
                    ()
                    ()
                )
            )
        )
        0
    )
    (
        (
            vcon
            (
                ind
                Set0
                "Nat"
                ()
                (
                    (
                        (
                            0
                        )
                        ()
                    )
                    (
                        ()
                        ()
                    )
                )
            )
            0
        )
        (
            vcon
            (
                ind
                Set0
                "Nat"
                ()
                (
                    (
                        (
                            0
                        )
                        ()
                    )
                    (
                        ()
                        ()
                    )
                )
            )
            1
        )
    )
)
